@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.465.2.37 2007-12-10 19:29:50 martin Exp $
+# $Id: CHANGES,v 1.465.2.38 2007-12-11 00:26:51 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,13 @@
 # --
 
 2.2.5 (2007/??/??)
+ - (2007/12/10) Fixed bug# 1428 - whitespaces remove from email subject
+    (notification and new tickets creation) if utf-8 is used.
+    The problem is a bug in MIME::Tools/MIME::Words, for more info see
+    CPAN-Bug# 5462: http://rt.cpan.org/Public/Bug/Display.html?id=5462
+    As solution Kernel/cpan-lib/MIME/Words.pm got patched. Note: anybody
+    who is not using Kernel/cpan-lib/ need to wait till this bug is fixed
+    in official MIME::Tools/MIME::Words releases.
  - (2007/12/10) Fixed bug# 2166 - Probem with HTML-mails sent by MS Outlook
     2003 - "&#8211;" / long dash gets not decoded.
  - (2007/12/10) Fixed bug# 2377 - Missing translation in
